Add maven url https, add https for gradle.properties, add retryablefailure support

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ configurations{
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://repo1.maven.org/maven2"
+    }
 }
 
 dependencies {
